--- a/index.html
+++ b/index.html
@@ -14,33 +14,43 @@
     <title>Knowledge Quiz</title>
   </head>
   <body>
-    <header class="header-flex">
+    <!-- header this need a high score and time -->
+    <header>
+      <label id="score">Score : <output id='out'>0</output></label>
       <h3 id="high-score">High score</h3>
 
-      <timer id="timer">Timer</timer>
-    </header>
 
-    <main>
+      <div id="countdown">
+
+      </div>
+    </header>
+<!-- need to make id and class -->
+    <main class="body">
       <section>
         <div class="container">
           <div id="questions-container" class="hide">
             <ul id="questions">
               Question
             </ul>
-            <div id="answer-btn" class="" btn-grid>
+            <!-- buttons for the questions and question or appemdChild????? google -->
+            <div id="answer-btn" class="btn-grid" >
               <button class="btn">Answer 1</button>
               <button class="btn">Answer 2</button>
               <button class="btn">Answer 3</button>
               <button class="btn">Answer 4</button>
             </div>
           </div>
-
-          <div clas="controls"></div>
+<!-- need start and next question buttons -->
+          <div class="controls"></div>
           <button id="start-btn" class="start-btn btn">Start Game</button>
           <button id="next-btn" class="next-btn btn hide">Next</button>
         </div>
       </section>
     </main>
-    <script src="./Assests/style/script/script.js"></script>
+    <script src="./Assests/style/script/script2.js"></script>
   </body>
 </html>
+
+
+
+<!-- keep style simpel? -->
