working on time and score on js

--- a/index.html
+++ b/index.html
@@ -16,15 +16,12 @@
   <body>
     <!-- header this need a high score and time -->
     <header>
-      <label id="score">Score : <output id='out'>0</output></label>
+      <label id="score">Score : <output id="out">0</output></label>
       <h3 id="high-score">High score</h3>
 
-
-      <div id="countdown">
-
-      </div>
+      <div id="countdown"></div>
     </header>
-<!-- need to make id and class -->
+    <!-- need to make id and class -->
     <main class="body">
       <section>
         <div class="container">
@@ -33,14 +30,14 @@
               Question
             </ul>
             <!-- buttons for the questions and question or appemdChild????? google -->
-            <div id="answer-btn" class="btn-grid" >
+            <div id="answer-btn" class="btn-grid">
               <button class="btn">Answer 1</button>
               <button class="btn">Answer 2</button>
               <button class="btn">Answer 3</button>
               <button class="btn">Answer 4</button>
             </div>
           </div>
-<!-- need start and next question buttons -->
+          <!-- need start and next question buttons -->
           <div class="controls"></div>
           <button id="start-btn" class="start-btn btn">Start Game</button>
           <button id="next-btn" class="next-btn btn hide">Next</button>
@@ -50,7 +47,5 @@
     <script src="./Assests/style/script/script2.js"></script>
   </body>
 </html>
-
-
 
 <!-- keep style simpel? -->
