made chanes to score system

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <!-- header this need a high score and time -->
     <header>
-      <label id="score">Score : <output id="out">0</output></label>
+      <div id="score"></div>
       <h3 id="high-score">High score</h3>
 
       <div id="countdown"></div>
