--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- header this need a high score and time -->
     <header>
       <div id="score"></div>
-      <h3 id="high-score">High score</h3>
+      <h3 id="high-score"></h3>
 
       <div id="countdown"></div>
     </header>
